--- a/src/css/Page.css
+++ b/src/css/Page.css
@@ -1,3 +1,9 @@
-.h2 {
+h2 {
     display: inline-block;
+  font-size: 20px;
+    word-spacing: 20px;
+}
+body {
+  
+background-image: url(".././images/A422roomfullview.jpg");
 }
