My picture will go in center

--- a/src/css/Page.css
+++ b/src/css/Page.css
@@ -1,9 +1,26 @@
+
+h1{
+    background-color: black;
+    color: aliceblue;
+    
+}
+
 h2 {
     display: inline-block;
   font-size: 20px;
     word-spacing: 20px;
+    background-color: black;
+    color: aliceblue;
 }
 body {
   
 background-image: url(".././images/A422roomfullview.jpg");
+}
+
+div.mypic {
+    align-content: center;
+    position: fixed;
+    left: 600px;
+    bottom: 250px;
+   content:url(http://placehold.it/350x150);
 }
