--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -26,3 +26,19 @@ div.mypic {
 
    content:url(http://placehold.it/350x150);
 }
+
+.wpad {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  width: 510px;
+  height: 350px;
+  justify-content: center;
+  align-items: center;
+  background-color: darkgray;
+  border-radius: 25px;
+  top: -250px;
+  left: 80px;
+    position: relative;
+    
+}
