--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,7 +2,8 @@
 h1{
     background-color: black;
     color: aliceblue;
-    
+    animation-name: colorswap;
+    animation-duration: 4s;
 }
 
 h2 {
@@ -32,5 +33,12 @@ div.mypic {
 p {
     color: saddlebrown;
     
+}
+@keyframes colorswap {
+  0%   {background-color:red; left:0px; top:0px;}
+  25%  {background-color:yellow; left:200px; top:0px;}
+  50%  {background-color:blue; left:200px; top:200px;}
+  75%  {background-color:green; left:0px; top:200px;}
+  100% {background-color:red; left:0px; top:0px;}
 }
 
