--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -36,9 +36,24 @@ p {
 }
 @keyframes colorswap {
   0%   {background-color:red; left:0px; top:0px;}
-  25%  {background-color:yellow; left:200px; top:0px;}
-  50%  {background-color:blue; left:200px; top:200px;}
+  25%  {background-color:indianred; left:200px; top:0px;}
+  50%  {background-color:yellowgreen; left:200px; top:200px;}
   75%  {background-color:green; left:0px; top:200px;}
   100% {background-color:red; left:0px; top:0px;}
 }
 
+div.Aboutme{
+    position: relative;
+}
+
+div.text{
+   position: absolute;
+ left: 1100px;
+    top: 50px;
+
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+    
+}
