--- a/src/css/Gallery.css
+++ b/src/css/Gallery.css
@@ -1,84 +1,117 @@
-
+.h2 {
+    position: absolute;
+}
 
 
 div.back {
     align-content: center;
-    position: fixed;
+    position: absolute;
   top: 20px;
+    min-height: 1180px;
 
    content:url(".././images/persondel.jpg");
 }
 
 div.img {
-    position: absolute;
-   
+       display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 800px;
+    height: 500px;
+    bottom: 400px;
+     border-radius: 25px;
      content:url(".././images/persondel.jpg");
 }
 
 
 
 div.img2 {
-    position: absolute;
-   
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 800px;
+    height: 500px;
+    bottom: 400px;
+     border-radius: 25px;
      content:url(".././images/A422roomfullview.jpg");
 }
 
 
 
 div.img3 {
-    position: absolute;
-   
+       display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 800px;
+    height: 500px;
+    bottom: 400px;
+     border-radius: 25px;
      content:url(".././images/nwfinM.jpg");
 }
 
 
 
 div.img4 {
-    position: absolute;
-  
+     display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 800px;
+    height: 500px;
+    bottom: 400px;
+     border-radius: 25px;
      content:url(".././images/nwcityresourcescityp1.jpg");
 }
 
 
 
 div.img5 {
-    position: absolute;
- 
+       display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 800px;
+    height: 500px;
+    bottom: 400px;
+     border-radius: 25px;
      content:url(".././images/MidtermRoom.jpg");
 }
 
 
 
 div.img6 {
-    position: absolute;
-    
+       display: block;
+  margin-left: auto;
+  margin-right: auto;
+    width: 800px;
+    height: 500px;
+    bottom: 400px;
+     border-radius: 25px;
      content:url(".././images/DELNWnoting.jpg");
 }
 
-/*
+
 div.img:hover {
-    transform: scale(4.5);
+    transform: scale(1.5);
 }
 
 div.img2:hover {
-    transform: scale(4.5);
+    transform: scale(1.5);
 }
 
 div.img3:hover {
-    transform: scale(4.5);
+    transform: scale(1.5);
 }
 
 div.img4:hover {
-    transform: scale(4.5);
+    transform: scale(1.5);
 }
 
 div.img5:hover {
-    transform: scale(4.5);
+    transform: scale(1.5);
 }
 
 div.img6:hover {
-    transform: scale(4.5);
+    transform: scale(1.5);
 }
 
-*/
+
 
