displays message of email being sent

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -2,3 +2,13 @@ div.Pen {
     font-size: 100px;
 }
 
+.success-msg {
+    color:aquamarine;
+    padding: 10px 15px;
+}
+
+
+.err-msg {
+    color:red;
+    padding: 10px 15px;
+}
