--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -57,3 +57,15 @@ div.text{
   padding-right: 20px;
     
 }
+
+
+/* Media Query for responsive */
+
+@media screen and (max-width: 700px) {
+    
+    h1{
+    background-color: red;
+   
+}
+    
+}
