--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -61,11 +61,40 @@ div.text{
 
 /* Media Query for responsive */
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
     
     h1{
-    background-color: red;
+    background-color: blue;
    
 }
+    
+    div.text{
+   position: absolute;
+ left: 30px;
+      
+    top: 380px;
+}
+    
+    div.mypic {
+    align-content: center;
+    position:absolute;
+    left: 100px;
+    bottom: 200px;
+ width: 450px;
+
+   content:url(".././images/picof.jpg");
+}
+    
+    body {
+  
+
+    background-color: floralwhite;
+    
+}
+
+    
+    
+    
+    
     
 }
