--- a/src/css/Videos.css
+++ b/src/css/Videos.css
@@ -66,3 +66,49 @@ opacity: 0.5;
   padding-right: 20px;
     
 }
+
+
+
+/* Media Query for responsive */
+
+@media screen and (max-width: 800px) {
+    
+    
+    div.vidshot {
+    position: absolute;
+   opacity: 1;
+  width: 400px;
+    left: 50px;
+    top:50px;
+}
+    
+    
+    div.vidshot2 {
+    position: absolute;
+   opacity: 1;
+  width: 400px;
+    left: 50px;
+    
+}
+    div.cover {
+  width: 100%;
+content:url(".././images/W11Abstract1pic.jpg");
+        height: 100%;
+}
+
+    div.text2{
+   position: absolute;
+ left:550px;
+    top: -200px;
+        width: 200px;
+opacity: 1;
+        animation: none;
+    
+}
+    
+    div.Aboutme2{
+    animation: none;
+}
+    
+    
+}
